--- a/src/pages/Home/Hero/Hero.scss
+++ b/src/pages/Home/Hero/Hero.scss
@@ -4,7 +4,7 @@
   height: 110lvh;
   width: 100vw;
 
-  background-repeat: no-repeat;
+  background: url("../../../../public/images/Home/hero.webp") no-repeat;
   background-size: cover;
   position: relative;
   background-position-x: 0%;
