--- a/src/pages/Home/Universe/Universe.scss
+++ b/src/pages/Home/Universe/Universe.scss
@@ -132,4 +132,26 @@
       }
     }
   }
+
+  .statics {
+    @include grid();
+    margin-top: 13vw;
+
+    .nums {
+      &-1 {
+        grid-column: 1/5;
+      }
+
+      &-2 {
+        grid-column: 7/13;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+      }
+
+      h1 {
+        margin-top: 3vw;
+      }
+    }
+  }
 }
