--- a/src/pages/Home/ImportantThing/ImportantThing.scss
+++ b/src/pages/Home/ImportantThing/ImportantThing.scss
@@ -11,7 +11,6 @@
     height: 30vw;
 
     &-wrapper {
-      border: 1px solid;
       height: 150lvh;
       width: 100vw;
       display: flex;
@@ -52,12 +51,13 @@
 
   &__wrapper {
     @include grid();
-    margin-top: 5vw;
+    margin-top: 3vw;
 
     .left {
       grid-column: 1/5;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
+      margin-top: 10vw;
 
       &-title {
         text-wrap: nowrap;
@@ -75,19 +75,58 @@
     }
 
     .right {
-      grid-column: 6/12;
+      grid-column: 7/12;
       display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      padding-left: 5vw;
+      grid-template-columns: repeat(3, 1fr);
 
       .title {
-        grid-column: 1/3;
+        grid-column: 1/4;
         text-align: end;
 
         &__to-left {
           text-align: start;
           width: 100%;
           display: inline-block;
+        }
+      }
+
+      .steps {
+        grid-column: 1/4;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        row-gap: 2vw;
+        position: relative;
+        margin-top: 2vw;
+
+        &__image {
+          width: 100%;
+          grid-column: 2/4;
+        }
+        
+        &__title {
+            margin-top: 0.6vw;
+        }
+
+        &__list {
+          grid-column: 2/4;
+        }
+
+        &__item {
+          display: flex;
+          justify-content: space-between;
+          padding: 0.6vw 0;
+          border-top: 0.1vw solid;
+
+          &:last-of-type {
+            border-bottom: 0.1vw solid;
+          }
+        }
+
+        &__button {
+          margin-top: 3vw;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
         }
       }
     }
