--- a/src/pages/Home/Hero/Hero.scss
+++ b/src/pages/Home/Hero/Hero.scss
@@ -5,6 +5,7 @@
   width: 100vw;
 
   background: url("../../../../public/images/Home/hero.webp") no-repeat;
+  // background-attachment: fixed;
   background-size: cover;
   position: relative;
   background-position-x: 0%;
