--- a/src/pages/Home/Loving/Loving.scss
+++ b/src/pages/Home/Loving/Loving.scss
@@ -3,10 +3,10 @@
 .loving {
   margin-top: 10vw;
   width: 100vw;
-  height: 216lvh;
+  height: 223lvh;
   background: url("../../../../public/images/Home/loving.webp") no-repeat;
   background-size: cover;
-  background-position: 50% 0;
+  background-position: 50% 100%;
   position: relative;
 
   &__wrapper {
