--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -11,7 +11,7 @@
   padding: 0.3vw 1.6vw;
 
   justify-content: space-between;
-  z-index: 10;
+  z-index: 1000;
   position: fixed;
   top: 0;
   left: 0;
@@ -39,6 +39,7 @@
 
   &__logo {
     width: 22%;
+    height: 1.6vw;
     position: relative;
     z-index: 100;
 
