--- a/src/pages/Home/Loving/Loving.scss
+++ b/src/pages/Home/Loving/Loving.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/global.scss";
 
 .loving {
-  margin-top: 10vw;
+  // margin-top: 10vw;
   width: 100vw;
   height: 223lvh;
   background: url("../../../../public/images/Home/loving.webp") no-repeat;
