--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -36,24 +36,30 @@
 
     &__title {
       grid-column: 1/3;
+      padding-top: 3vw;
     }
 
     &__name {
-      margin-bottom: 1vw;
+      margin-bottom: 1.3vw;
       color: $g-70;
     }
   }
 
   .socials {
     grid-column: 10/12;
-    display: flex;
-    flex-wrap: wrap;
-    column-gap: 1vw;
-    row-gap: 0.1vw;
+    
 
     &__title {
       color: $g-70;
       width: 100%;
+    }
+
+    &__list {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 2vw;
+      row-gap: 1vw;
+      margin-top: 1.5vw;
     }
 
     &__item {
@@ -82,8 +88,8 @@
       height: 0.8vw;
       width: 1vw;
       background: linear-gradient(
-        rgb(0, 26, 255) 49%,
-        rgb(238, 255, 0) 49%
+        rgb(14, 92, 178) 49%,
+        rgb(243, 207, 14) 49%
       );
     }
   }
