--- a/src/pages/Home/CTA/CTA.scss
+++ b/src/pages/Home/CTA/CTA.scss
@@ -10,7 +10,6 @@
   background-repeat: no-repeat;
   width: 100vw;
   height: 180lvh;
-  margin-top: 3vw;
   position: relative;
   color: $c-white;
   z-index: 0;
@@ -21,12 +20,12 @@
     clip-path: inset(100% 0 0 0);
     opacity: 0;
 
-    transform: translateY(-50%);
+    transform: translateY(-50%) rotate(-180deg);
     height: 160lvh;
     width: 0.1vw;
-    background: linear-gradient(
+    background: linear-gradient(0deg,
       rgba(255, 255, 255, 0) 9%,
-      rgb(255, 255, 255) 33%,
+      rgb(255, 255, 255) 20%,
       rgb(235, 235, 235) 79%,
       rgb(49, 49, 49) 100%
     );
@@ -40,14 +39,6 @@
       height: 220lvh;
 
       transform: translateY(-45%) rotate(-135deg);
-
-      background: linear-gradient(0deg,
-      rgba(255, 255, 255, 0) 9%,
-      rgb(255, 255, 255) 20%,
-      rgb(235, 235, 235) 79%,
-      rgb(49, 49, 49) 100%
-    );
-
     }
   }
 
