--- a/src/pages/Home/ImportantThing/ImportantThing.scss
+++ b/src/pages/Home/ImportantThing/ImportantThing.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/global.scss";
 
 .important-thing {
-  margin-top: 10vw;
+  margin-top: 50lvh;
 
   .slider {
     display: flex;
@@ -11,7 +11,7 @@
     top: 50%;
 
     &-wrapper {
-      height: 200lvh;
+      height: 220lvh;
       width: 100vw;
       display: flex;
       flex-direction: column;
