--- a/src/pages/Home/Services/Services.scss
+++ b/src/pages/Home/Services/Services.scss
@@ -59,10 +59,8 @@
     top: 50%;
     // left: 50%;
     transform: translate(-50%, -50%);
-    // z-index: 1000;
     
     &-item {
-      transform: rotate(15deg);
       width: 100%;
       height: 100%;
     }
@@ -74,6 +72,8 @@
     justify-content: space-between;
     cursor: default;
     position: relative;
+    // border-bottom: 0.1vw solid $g-100;
+
 
     &::after {
       content: "";
@@ -89,10 +89,14 @@
     &-left {
       display: flex;
       gap: 3vw;
+      position: relative;
+      z-index: -10;
     }
-
+    
     &-right {
       color: $g-70;
+      position: relative;
+      z-index: -10;
     }
 
   }
