universe title fixed (try 1)

--- a/src/pages/Home/Universe/Universe.scss
+++ b/src/pages/Home/Universe/Universe.scss
@@ -61,10 +61,10 @@
           display: flex;
           flex-direction: column;
           gap: 1vw;
-          color: $c-white;
-          mix-blend-mode: difference;
-          font-weight: 100;
-          letter-spacing: 0.02vw;
+          // color: $c-white;
+          // mix-blend-mode: difference;
+          // font-weight: 100;
+          // letter-spacing: 0.02vw;
           width: 50%;
 
           &:first-of-type {
