--- a/src/pages/Home/Loving/Loving.scss
+++ b/src/pages/Home/Loving/Loving.scss
@@ -3,7 +3,7 @@
 .loving {
   // margin-top: 10vw;
   width: 100vw;
-  height: 193lvh;
+  height: max(222.7lvh, 2066px);
   background: url("../../../../public/images/Home/loving.webp") no-repeat;
   background-size: cover;
   background-position: 50% 100%;
