--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -22,63 +22,97 @@
         transform: translateX(10%);
       }
     }
+  }
+
+  .arrow {
+    width: 1.6vw;
+    height: 1.6vw;
+    transition: $transition;
+
+    &:nth-of-type(1) {
+      position: absolute;
+      left: 0;
+    }
+    &:nth-of-type(2) {
+      position: absolute;
+      left: -100%;
     }
 
-    .arrow {
+    &-wrapper {
+      display: flex;
+      gap: 1vw;
+      overflow: hidden;
       width: 1.6vw;
       height: 1.6vw;
-      transition: $transition;
 
+      position: relative;
 
       &:nth-of-type(2) {
-        position: absolute;
-        left: -100%;
-      }
-      &:nth-of-type(1) {
-        position: absolute;
-        left: 0;
-      }
-
-      &-wrapper {
-        display: flex;
-        gap: 1vw;
-        overflow: hidden;
-        width: 1.6vw;
-        height: 1.6vw;
-
-        position: relative;
-
-        &:nth-of-type(2) {
-          transform: rotate(-180deg);
-        }
-      }
-    }
-
-    .text {
-      position: relative;
-      overflow: hidden;
-
-      &::after {
-        content: "";
-        background: $c-white;
-        width: 30%;
-        height: 0.2vw;
-        position: absolute;
-        bottom: 0.01vw;
-        left: 0;
-        transform: translateX(-110%);
-        transition: $transition;
-      }
-    }
-
-    &--seconadry {
-      background-color: $c-white;
-      padding: 1vw 1.8vw;
-      border-radius: 0.4vw;
-
-      .arrow-wrapper {
-        line-height: 95%;
+        transform: rotate(-180deg);
       }
     }
   }
 
+  .text {
+    position: relative;
+    overflow: hidden;
+
+    &::after {
+      content: "";
+      background: $c-white;
+      width: 30%;
+      height: 0.2vw;
+      position: absolute;
+      bottom: 0.01vw;
+      left: 0;
+      transform: translateX(-110%);
+      transition: $transition;
+    }
+  }
+
+  &--seconadry {
+    background-color: $c-white;
+    padding: 1vw 1.8vw;
+    border-radius: 0.4vw;
+
+    &:hover {
+      .arrow {
+        &-wrapper {  
+          &:nth-of-type(2) {
+            .arrow {
+              &:nth-of-type(2) {
+                position: absolute;
+                left: -100%;
+              }
+              &:nth-of-type(1) {
+                position: absolute;
+                left: 0;
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .arrow {
+      &-wrapper {
+        line-height: 95%;
+
+        &:nth-of-type(2) {
+          transform: rotate(0);
+
+          .arrow {
+            &:nth-of-type(1) {
+              position: absolute;
+              left: 100%;
+            }
+            &:nth-of-type(2) {
+              position: absolute;
+              left: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
