--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -117,12 +117,27 @@ h6 {
     background: url("../../../public/images/figure/Of.svg") no-repeat center;
     width: 5vw;
     display: inline-block;
-    height: 7vw;
+    height: 8vw;
     position: absolute;
     transform: translate(20%, -20%);
+    background-size: contain;
 
     &__n {
       margin-left: 5vw;
+    }
+  }
+
+  &-for {
+    background: url("../../../public/images/figure/for.svg") no-repeat center;
+    width: 6.4vw;
+    display: inline-block;
+    height: 8vw;
+    position: absolute;
+    transform: translate(-20%, -20%);
+    background-size: contain;
+
+    &__n {
+      margin-left: 5.6vw;
     }
   }
 }
@@ -187,4 +202,8 @@ a {
     font-weight: 400;
     line-height: 120%;
   }
+}
+
+.qoute {
+  margin-right: 4vw;
 }
