--- a/src/pages/Home/Loving/Loving.scss
+++ b/src/pages/Home/Loving/Loving.scss
@@ -3,10 +3,10 @@
 .loving {
   // margin-top: 10vw;
   width: 100vw;
-  height: max(222.7lvh, 2066px);
-  background: url("../../../../public/images/Home/loving.webp") no-repeat;
+  height: 222.7lvh;
+  background: url("../../../../public/images/Home/loving.webp") no-repeat center;
   background-size: cover;
-  background-position: 50% 100%;
+  background-position-y: 100%;
   position: relative;
 
   &__wrapper {
