Contact page + transition pages anim

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -47,6 +47,11 @@
       width: 14.7vw;
       height: 13.5vw;
     }
+
+    &-item {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__list-links {
