--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,6 +1,11 @@
 $c-white: #ffffff;
 $c-black: #0f0f0f;
 
+$c-light-red: #FF3B30;
+$c-light-orange: #FF9500;
+$c-light-yellow: #FFCC00;
+$c-light-blue: #007AFF;
+
 $g-100: #212529;
 $g-90: #343a40;
 $g-80: #495057;
