--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -146,16 +146,20 @@ h6 {
   font-weight: 300;
 }
 
+.normal {
+  font-weight: 400;
+}
+
 .italic {
   font-style: italic;
 }
 
-.book {
-  font-weight: 600;
-}
-
 .semiBold {
   font-weight: 500;
+}
+
+.book {
+  font-weight: 600;
 }
 
 .body-text {
