--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -4,11 +4,12 @@
   background-color: #fff;
   z-index: 1000;
 
-
   .top {
     display: flex;
     justify-content: space-between;
     padding-top: 1vw;
+    position: relative;
+    z-index: 2;
 
     &__left {
       display: flex;
@@ -38,8 +39,6 @@
     .heart {
       width: 2vw;
       margin: 0 auto;
-
-      //scale(30)
     }
   }
 
@@ -72,5 +71,21 @@
     &::before {
       content: "‘";
     }
+  }
+
+  .heart--for-home {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    height: 110lvh;
+    width: 100vw;
+
+    background: url("../../../public/images/Home/hero.webp") no-repeat;
+    background-size: cover;
+    background-position-x: 50%;
+
+    mask: url("../../../public/images/heart.svg") no-repeat;
+    mask-size: 4vw;
+    mask-position: center 68%;
   }
 }
