--- a/src/pages/Home/Hero/Hero.scss
+++ b/src/pages/Home/Hero/Hero.scss
@@ -8,7 +8,7 @@
   // background-attachment: fixed;
   background-size: cover;
   position: relative;
-  background-position-x: 0%;
+  background-position-x: 50%;
 
   color: $c-white;
 
@@ -41,9 +41,14 @@
     left: 50%;
     transform: translate(-50%);
     text-align: center;
+    text-wrap: nowrap;
   }
 
   &__title {
     margin-top: 3vw;
+
+    @include forVerticalTablet() {
+      margin-top: 6vw;
+    }
   }
 }
