--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -33,6 +33,10 @@
   font-weight: 400;
   line-height: normal;
   letter-spacing: -0.1vw;
+
+  @include forVerticalTablet() {
+    font-size: 9.2vw;
+  }
 }
 
 %h5 {
@@ -164,6 +168,10 @@ h6 {
 
 .body-text {
   @extend %body-text;
+  
+  &-1 {
+    @extend %body-text;
+  }
 
   &-2 {
     font-size: 1.3vw;
@@ -177,14 +185,24 @@ h6 {
     font-size: 0.9vw;
     letter-spacing: -0.02vw;
     line-height: 120%;
+    font-weight: 400;
 
+    @include forVerticalTablet() {
+      font-size: 2.4vw;
+    }
+    
     &--first-line {
       line-height: 90%;
     }
   }
-
+  
   &-5 {
     font-size: 0.8vw;
+    
+    
+    @include forVerticalTablet() {
+      font-size: 2.2vw;
+    }
   }
 }
 
