--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,8 @@
 @import "./utils/fonts";
 @import "./utils/mixins";
 @import "./utils/variables";
+@import "./utils/adaptive-font";
+@import "./utils/responsive-data";
 
 body {
   @extend %body-text;
@@ -22,30 +24,37 @@ body {
   display: none;
 }
 
-[data-hidden] {
-  opacity: 0;
-}
-
-[data-only-Desktop] {
-  display: none;
-  
-  @include forDesktop() {
-    display: block;
-  }
-}
-
-[data-from-VTab] {
-  display: none;
-
-  @include forHorizontalTablet() {
-    display: flex;
-  }
-
-  @include forDesktop() {
-    display: flex;
-  }
-}
 
 .container {
-  padding: 0 1.6vw;
+  // padding: 0 1.6vw;
+  padding-left: 1.6vw;
+  padding-right: 1.6vw;
+  
+  @include forTablet {
+    padding-left: VW(18, $tablet);
+    padding-right: VW(18, $tablet);
+  }
+  
+  @include forMobile {
+    padding-left: VW(18, $mobile);
+    padding-right: VW(18, $mobile);
+  }
+}
+
+body {
+  &:has(.main--loading) {
+    overflow: hidden;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+
+    &::-webkit-scrollbar {
+      opacity: 0;
+    }  
+  }  
+}
+
+.white-space {
+  height: 100vh;
+  background-color:$g-10;
 }
