--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -137,6 +137,12 @@ input:-webkit-autofill {
 
 img {
   object-fit: cover;
+  user-drag: none;
+  -webkit-user-drag: none;
+  user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 hr {
