--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -7,14 +7,34 @@
   gap: 0.5vw;
   text-wrap: nowrap;
 
-  &:hover {
-    .arrow {
+  @include hover {
+    .arrow-wrapper {
       &:nth-of-type(1) {
-        left: 100%;
+        .arrow {
+          &:nth-of-type(2) {
+            position: absolute;
+            left: 0;
+          }
+          &:nth-of-type(1) {
+            position: absolute;
+            left: 100%;
+          }
+        }
       }
+
       &:nth-of-type(2) {
-        left: 0;
+        .arrow {
+          &:nth-of-type(1) {
+            position: absolute;
+            right: 0;
+          }
+          &:nth-of-type(2) {
+            position: absolute;
+            right: 100%;
+          }
+        }
       }
+
     }
 
     .text {
@@ -30,13 +50,14 @@
     height: 1.6vw;
     transition: $transition;
 
-    &:nth-of-type(1) {
-      position: absolute;
-      left: 0;
+    @include forTablet {
+      width: VW(28, $tablet);
+      height: VW(28, $tablet);
     }
-    &:nth-of-type(2) {
-      position: absolute;
-      left: -100%;
+    
+    @include forMobile {
+      width: VW(28, $mobile);
+      height: VW(28, $mobile);
     }
 
     &-wrapper {
@@ -47,8 +68,40 @@
 
       position: relative;
 
+      @include forTablet {
+        width: VW(28, $tablet);
+        height: VW(28, $tablet);
+      }
+
+      @include forMobile {
+        width: VW(28, $mobile);
+        height: VW(28, $mobile);
+      }
+
+      &:nth-of-type(1) {
+        .arrow {
+          &:nth-of-type(1) {
+            position: absolute;
+            left: 0;
+          }
+          &:nth-of-type(2) {
+            position: absolute;
+            left: -100%;
+          }
+        }
+      }
+
       &:nth-of-type(2) {
-        transform: rotate(-180deg);
+        .arrow {
+          &:nth-of-type(2) {
+            position: absolute;
+            right: 0;
+          }
+          &:nth-of-type(1) {
+            position: absolute;
+            right: -100%;
+          }
+        }
       }
     }
   }
@@ -75,7 +128,11 @@
     padding: 1vw 1.8vw;
     border-radius: 0.4vw;
 
-    &:hover {
+    @include forTablet {
+      font-size: VW(14, $tablet);
+    }
+
+    @include hover {
       .arrow {
         &-wrapper {  
           &:nth-of-type(2) {
@@ -97,7 +154,12 @@
     .arrow {
       &-wrapper {
         line-height: 95%;
-
+        
+        @include forTablet {
+          width: VW(14, $tablet);
+          height: VW(14, $tablet);
+        }
+    
         &:nth-of-type(2) {
           transform: rotate(0);
 
@@ -126,12 +188,19 @@
     font: inherit;
     height: 1.1vw;
 
-    &:hover {
+    @include hover {
       .link-button {
         transform: translateY(-100%);
       }
     }
+    
+    @media (hover: none) {
+      .link-button--buttom {
+        display: none;
+      }
+    }
   }
+
 
   &-button {
     transition: $transition;
