--- a/src/pages/Home/CTA/CTA.scss
+++ b/src/pages/Home/CTA/CTA.scss
@@ -15,8 +15,12 @@
   z-index: 0;
   overflow: hidden;
 
-  @include forHorizontalTablet() {
+  @include forPortraitTablet() {
     height: 150lvh;
+  }
+  
+  @include forTablet {
+    height: 80lvh;
   }
 
   &::after {
@@ -51,14 +55,23 @@
     left: 50%;
     z-index: -1;
 
+    @include forTablet {
+      height: 100lvh;
+      width: 0.15vw;
+    }  
+    
     &:nth-of-type(2) {
       top: -100%;
       bottom: -100%;
       height: 220lvh;
-
+      
+      @include forTablet {
+        height: 120lvh;
+      }  
+      
       transform: translateY(-45%) rotate(-135deg);
 
-      @include forHorizontalTablet() {
+      @include forPortraitTablet() {
         transform: translateY(-46.7%) rotate(-135deg);
       }
     }
@@ -68,11 +81,19 @@
     padding: 22vw 1.6vw 0;
     @include grid();
     row-gap: 35lvh;
+    
+    @include forTablet {
+      row-gap: 19lvh;
+    }  
   }
 
   .top {
     grid-column: 1/3;
     padding-right: 0.6vw;
+    
+    @include forTablet {
+      grid-column: 1/4;
+    }  
 
     .qoute {
       margin-right: 2vw;
@@ -91,6 +112,11 @@
       width: 3vw;
       height: 3vw;
       grid-column: 9/11;
+
+      @include forTablet {
+        width: VW(29, $tablet);
+        height: VW(29, $tablet);
+      }
     }
   }
 
@@ -103,11 +129,19 @@
     &__second {
       text-align: center;
       padding-right: 5vw;
+      
+      @include forTablet {
+        padding-right: 3vw;
+      }  
     }
   }
 
   &__title {
     grid-column: 1/5;
+    
+    @include forTablet {
+      padding-right: 1vw;
+    }
   }
 
   &__button {
