--- a/src/pages/Home/Services/Services.scss
+++ b/src/pages/Home/Services/Services.scss
@@ -6,6 +6,10 @@
   z-index: 2;
   margin-top: 13vw;
 
+  &-title {
+    grid-column: 7/13;
+  }
+
   .titles {
     @include grid();
     align-items: end;
@@ -13,31 +17,17 @@
     padding-bottom: 0.5vw;
     border-bottom: 0.1vw solid;
 
+    &__left {
+      display: flex;
+
+      grid-column: 1/5;
+      @include forTablet {
+        grid-column: 1/6;
+      }
+    }
+
     .description-title {
       grid-column: 1/2;
-    }
-
-    .feedback-title {
-      grid-column: 3/6;
-    }
-
-    .services-title {
-      grid-column: 7/13;
-    }
-  }
-
-  .left {
-    display: flex;
-    grid-column: 1/5;
-
-    .description,
-    .feedback {
-      width: 50%;
-      margin-top: 1vw;
-
-      .qoute {
-        margin-right: 3vw;
-      }
     }
   }
 
@@ -94,6 +84,40 @@
       color: $g-70;
       position: relative;
       z-index: -10;
+    }
+  }
+
+  .description {
+    padding-top: VW(20);
+    grid-column: 1/3;
+
+    @include forTablet {
+      grid-column: 1/4;
+    }
+    
+    &-title {
+      grid-column: 1/3;
+
+      @include forTablet {
+        grid-column: 1/4;
+      }
+    }
+  }
+
+  .feedback {
+    padding-top: VW(20);
+    grid-column: 3/5;
+
+    @include forTablet {
+      grid-column: 4/6;
+    }
+    
+    &-title {
+      grid-column: 3/5;
+      
+      @include forTablet {
+        grid-column: 4/6;
+      }
     }
   }
 }
