--- a/src/styles/utils/_typography.scss
+++ b/src/styles/utils/_typography.scss
@@ -34,7 +34,7 @@
   line-height: normal;
   letter-spacing: -0.1vw;
 
-  @include forVerticalTablet() {
+  @include forTablet() {
     font-size: 9.2vw;
   }
 }
@@ -59,11 +59,19 @@
 
 %body-text {
   font-family: "HelveticaNeueCyr", sans-serif;
-  font-size: 1.7vw;
+  font-size: VW(33);
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   line-height: normal;
   letter-spacing: normal;
+  
+  @include forTablet {
+    font-size: VW(33, $tablet);
+  }
+
+  @include forMobile {
+    font-size: VW(14, $mobile);
+  }
 }
 
 %figure {
@@ -77,6 +85,14 @@
   letter-spacing: normal;
   font-size: 1.5vw;
   font-weight: bold;
+
+  @include forTablet {
+    font-size: VW(28, $tablet);
+  }
+  
+  @include forMobile {
+    font-size: VW(28, $mobile);
+  }
 }
 
 .bold {
@@ -120,8 +136,8 @@ h6 {
   &-of {
     background: url("../../../public/images/figure/Of.svg") no-repeat center;
     width: 5vw;
-    display: inline-block;
     height: 8vw;
+    display: inline-block;
     position: absolute;
     transform: translate(20%, -20%);
     background-size: contain;
@@ -134,24 +150,33 @@ h6 {
   &-for {
     background: url("../../../public/images/figure/for.svg") no-repeat center;
     width: 6.4vw;
-    display: inline-block;
     height: 8vw;
+    display: inline-block;
     position: absolute;
     transform: translate(-20%, -20%);
     background-size: contain;
 
+    @include forMobile {
+      width: 9.4vw;
+      height: 11vw;
+    }
+
     &__n {
       margin-left: 5.6vw;
+
+      @include forMobile {
+        margin-left: 7.5vw;
+      }
     }
   }
 }
 
 .light {
-  font-weight: 300;
+  font-weight: 300 !important;
 }
 
 .normal {
-  font-weight: 400;
+  font-weight: 400 !important;
 }
 
 .italic {
@@ -159,11 +184,11 @@ h6 {
 }
 
 .semiBold {
-  font-weight: 500;
+  font-weight: 500 !important;
 }
 
 .book {
-  font-weight: 600;
+  font-weight: 600 !important;
 }
 
 .body-text {
@@ -187,10 +212,14 @@ h6 {
     line-height: 120%;
     font-weight: 400;
 
-    @include forVerticalTablet() {
+    @include forTablet() {
       font-size: 2.4vw;
     }
-    
+
+    @include forMobile {
+      font-size: VW(14, $mobile);
+    }  
+
     &--first-line {
       line-height: 90%;
     }
@@ -199,8 +228,7 @@ h6 {
   &-5 {
     font-size: 0.8vw;
     
-    
-    @include forVerticalTablet() {
+    @include forTablet() {
       font-size: 2.2vw;
     }
   }
