--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -18,11 +18,11 @@ $g-20: #f1f3f5;
 $g-10: #f8f9fa;
 
 /* -- Media Query Breakpoints -- */
-$phone: 320;
+$mobile: 320;
 $phablet: 556;
 $tablet: 768;
 $tablet-large: 1024;
 $laptop: 1199;
-$desktop: 1440;
+$desktop: 1920;
 
-$transition: all 0.6s cubic-bezier(.62,.28,.23,.99)
+$transition: 0.6s cubic-bezier(.62,.28,.23,.99)
